- The Push laser speed has been increased from 400 to 450, and its radius increased from 3 to 4.
- The Push laser now fires straight at the crosshair, rather than 8 units underneath.
- A drawing utensil has been implemented as an extra key for the people who think of Push as a multiplayer MSPaint simulator.
- The F1 help screen is no longer the best but now is much more informative.

MAPS:
- Absolutely nothing about Push28 was changed.
- The teleporters on Push11 have been lowered and their textures changed, for easier jumping-into and location differentiation.
- Push33's amount of actors has been dramatically cut down to a third of what it was, and filesize was reduced from over three megabytes to barely 1.6. This should help make the map less laggy.
- Push27 has been expanded and the center arena filled in. This should make the arena more difficult to recover from, and slightly more difficult to get knocked off.
- The center platform in PUSH04 has been raised so people can react easier to trips. The outer ring has been expanded so one simple nudge doesn't throw people off, but has lowered so getting thrown off requires more reaction.
- PUSH35's main arena was made smaller, and the walls stretched further out. It should be easier to knock people off now.
- PUSH36 has been dramatically ensmallened and now can actually be recovered from.
- PUSH17 has smaller walls to make it easier to recover and a few floating platforms for a little bit of Z-axis action.
- PUSH30 has had the laggy pyramids removed, and many many more spawn points placed throughout the area.
- PUSH34's silos have been expanded for more safe ground.

- A new map, the XXX ImpBar by Mystical, has been added at Push37.
- A new map, Ice Ice Baby by UniversalQuantifier, has been added at Push38.
- A new map, Fusion Reactor by UnholyPimpin, has been added at Push39.
- A new map, Could'a Gotcha by UnholyPimpin, has been added at Push40.
- A new map, Tritium Extractor by GuardSoul, has been added at Push41.